created info component

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,23 @@
 // app global css in SCSS form
+
+html {
+  font-size: 62.5%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  padding: 0;
+}
+.q-layout {
+  background-color: #09090a;
+}
+
+.raleway {
+  font-family: 'Raleway', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
