--- a/src/css/particles.scss
+++ b/src/css/particles.scss
@@ -12,12 +12,11 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: transparent;
-  background-image: url('');
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: 50% 50%;
-  z-index: 9999;
-} /* ---- stats.js ---- */
+  z-index: 1;
+}
 
 #stats,
 .count-particles {
