--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #1976d2;
-$secondary: #26a69a;
+$secondary: #202024;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
