--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,7 +22,7 @@ h5 {
 }
 
 .container {
-  margin-bottom: 10rem;
+  padding: 5rem 0;
   display: flex;
   flex-direction: column !important;
   align-items: center !important;
