add tags and projects

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,12 +14,15 @@
 
 $primary: #1976d2;
 $secondary: #202024;
-$accent: #9c27b0;
-
-$dark: #1d1d1d;
-$dark-page: #121212;
-
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$deep-purple: #8234e9;
+$orange: #FF9800;
+$yellow: #FFC400;
+$red: #FF7043;
+$dark-blue: #00838F;
+$light-blue: #00BCD4;
+$pink: #EC407A;
+$purple: #CE93D8;
+$brown: #ECEFF1;
+$cyan: #00695C;
+$black: #455A64;
+$white: #FFFF;
